--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main-container">
+		<h1>Testimonials</h1>
+		<testimonial>
+			<text>This product is amazing! I highly recommend it to anyone in need of a solution like this.</text>
+			<author>- John Doe</author>
+		</testimonial>
+		<testimonial>
+			<text>I have been using this for a few weeks now and it has completely transformed my workflow.</text>
+			<author>- Jane Smith</author>
+		</testimonial>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
