--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 	<div class="main-container">
 		<h1>Testimonials</h1>
-		<testimonial>
-			<text>This product is amazing! I highly recommend it to anyone in need of a solution like this.</text>
+		<div class="testimonial">
+			<div class="text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</div>
 			<author>- John Doe</author>
-		</testimonial>
-		<testimonial>
-			<text>I have been using this for a few weeks now and it has completely transformed my workflow.</text>
+		</div>
+		<div class="testimonial">
+			<div class="text">I have been using this for a few weeks now and it has completely transformed my workflow.</div>
 			<author>- Jane Smith</author>
-		</testimonial>
+		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
