--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 	<div class="main-container">
 		<h1>Testimonials</h1>
 		<div class="testimonial">
-			<div class="text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</div>
+			<text>This product is amazing! I highly recommend it to anyone in need of a solution like this.</text>
 			<author>- John Doe</author>
 		</div>
 		<div class="testimonial">
-			<div class="text">I have been using this for a few weeks now and it has completely transformed my workflow.</div>
+			<text>I have been using this for a few weeks now and it has completely transformed my workflow.</text>
 			<author>- Jane Smith</author>
 		</div>
 	</div>
